<resources>
    <string name="app_name">RoomBooking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="room">Room</string>
    <string name="and_more">\u0020and more..</string>
    <string name="capacity">Capacity:</string>
    <string name="available_ext_hour">Available next hour</string>
    <string name="filter_rooms">Filter rooms</string>
    <string name="avail_next_hour">Avail. next hour</string>
    <string name="avialability">Availability</string>
    <string name="equipments">Equipments</string>
    <string name="size">Size</string>
    <string name="title_activity_book_room">BookRoomActivity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
</resources>
