<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bassem.roombooking.roomdetails.RoomDetailsFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin5"
                    android:layout_marginEnd="@dimen/margin5"
                    android:text="@string/room"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/textSize18" />


                <TextView
                    android:id="@+id/txt_room_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlue"
                    android:textSize="@dimen/textSize18" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginTop="@dimen/margin5"
                android:text="@string/avialability"

                android:textColor="@color/colorPink" />

            <com.bassem.roombooking.controls.RoomAvailabilityDisplayBar
                android:id="@+id/availability_display_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/availability_bar_height"
                android:layout_marginBottom="@dimen/margin5"

                android:layout_marginTop="@dimen/margin5">

            </com.bassem.roombooking.controls.RoomAvailabilityDisplayBar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginTop="@dimen/margin5"
                android:text="@string/equipments"

                android:textColor="@color/colorPink" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginTop="@dimen/margin5"
                android:elevation="2dp"
                android:padding="@dimen/padding5"></android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/margin5"
                        android:layout_marginBottom="@dimen/margin5"

                        android:layout_marginTop="@dimen/margin5"
                        android:text="@string/capacity"

                        android:textColor="@color/colorPink" />

                    <TextView
                        android:id="@+id/txt_capacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/margin5"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/margin5"
                        android:layout_marginBottom="@dimen/margin5"
                        android:layout_marginTop="@dimen/margin5"
                        android:text="@string/size"
                        android:textColor="@color/colorPink" />

                    <TextView
                        android:id="@+id/txt_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/margin5"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginTop="@dimen/margin5"
                android:elevation="2dp"
                android:padding="@dimen/padding5">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rclr_equipments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginTop="@dimen/margin5"
                android:elevation="2dp"
                android:padding="@dimen/padding5">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rclr_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin20"
            android:layout_marginEnd="@dimen/margin15"
            android:src="@drawable/check_symbol" />
    </FrameLayout>
</FrameLayout>
